fixed process z-index

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -146,7 +146,7 @@
 	#process .process-tile-list-stepped li.tile,
 	#process .process-tile-list-stepped li.tile:last-child {
         margin: 13rem 0 0;
-        padding: 0 2rem;
+        padding: 2rem 1rem 0;
         height: 20rem;
 	}
 	#process .process-tile-list-stepped li.tile h2 {
